<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adriangutierrez.android.geoi_app.GeoActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp"
        tools:context=".GeoActivity">

        <TextView
            android:id="@+id/texto_pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="36dp"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textColor="#B40404"
            android:typeface="monospace"
            android:text="@string/texto_pregunta1"
            style="?android:listSeparatorTextViewStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_verdadero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="#01DF01"
                android:text="@string/texto_boton_cierto" />

            <Button
                android:id="@+id/boton_falso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="#FF0000"
                android:text="@string/texto_boton_falso" />
        </LinearLayout>

        <Button
            android:id="@+id/boton_ver_respuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/texto_boton_ver_respuesta" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_anterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="16dp"
                android:textColor="#08088A"
                android:text="@string/texto_boton_anterior" />

            <Button
                android:id="@+id/boton_siguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="#08088A"
                android:text="@string/texto_boton_siguiente" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>